working on general fixes part 1

--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -46,7 +46,9 @@
           </svg> {{ course.hours }}h </span> <span>{{ course.price }}€</span> </div> 
           
           <button [routerLink]="['/course', course.id]"
-        class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg transition-shadow duration-300">
+        class="mt-4 h-10 bg-redIsla text-white font-poppins px-6 py-2
+                     hover:bg-red-800 transition
+">
   Saiba Mais
 </button>
 
