--- a/frontend/src/app/pages/frontoffice/course/course.html
+++ b/frontend/src/app/pages/frontoffice/course/course.html
@@ -68,10 +68,10 @@
 
 <div class="w-full max-w-[1300px] mx-auto flex justify-end gap-4 mt-10 mb-10">
   <button [routerLink]="['/course', course?.id, 'quiz']"
-    class="bg-white text-black border border-black font-poppins px-6 py-2 hover:bg-black hover:text-white transition w-full md:w-auto">
+    class="bg-gray-200 text-gray-800   font-poppins px-6 py-2 hover:bg-gray-300  transition w-full md:w-auto">
     Faça o Quiz
   </button>
-  <button  routerLink="" class="bg-redIsla text-white font-poppins px-6 py-2 hover:bg-black hover:text-white transition w-full md:w-auto">
+  <button  routerLink="" class="bg-redIsla text-white font-poppins px-6 py-2 hover:bg-red-800 transition  w-full md:w-auto">
     Candidatar-se
   </button>
 </div>
