--- a/frontend/src/app/pages/frontoffice/quiz/quiz-video/quiz-video.html
+++ b/frontend/src/app/pages/frontoffice/quiz/quiz-video/quiz-video.html
@@ -1,17 +1,16 @@
 <div class="w-full max-w-[1300px] mx-auto flex flex-col gap-6 pt-10 mt-32">
 
-  <div *ngIf="loading()" class="alert alert-info">Carregando…</div>
+  <div *ngIf="loading()" class="alert alert-info m-10">Carregando…</div>
 
   <div *ngIf="!loading() && !quiz()">
-    <h2 class="text-3xl font-poppins text-black mb-2">Sem quiz para este curso</h2>
-    <p class="text-base text-black">Ainda não existe um quiz associado a este curso.</p>
+    <h2 class="text-3xl font-poppins text-black mb-2 m-10">Sem quiz para este curso</h2>
+    <p class="text-base text-black m-10">Ainda não existe um quiz associado a este curso.</p>
   </div>
 
   <div *ngIf="!loading() && quiz()">
 
     <h1 class="text-3xl sm:text-4xl md:text-4xl font-poppins text-black mb-2">{{ quiz()?.title }}</h1>
     <p class="text-base text-black mb-4" *ngIf="quiz()?.description">{{ quiz()?.description }}</p>
-
 
     <div *ngIf="safeEmbedUrl(); else noVideo" class="relative w-full pb-[56.25%]">
       <iframe [src]="safeEmbedUrl()" title="Vídeo do quiz" frameborder="0"
@@ -25,17 +24,33 @@
       </div>
     </ng-template>
 
-
     <div class="flex justify-end gap-4 mt-20 mb-64">
-      <a [routerLink]="['/course', courseId]" class="bg-white text-black border border-black font-poppins px-6 py-2
-           hover:bg-black hover:text-white transition w-full md:w-auto">
+      <a [routerLink]="['/course', courseId]" class="bg-gray-200 text-gray-800 font-poppins px-6 py-2 hover:bg-gray-300 transition w-full md:w-auto">
         Voltar
       </a>
 
-      <button (click)="startQuiz()" class="bg-redIsla text-white font-poppins px-6 py-2
-           hover:bg-black hover:text-white transition w-full md:w-auto">
+      <button (click)="startQuiz()" class="bg-redIsla text-white font-poppins px-6 py-2 hover:bg-red-800 transition w-full md:w-auto">
         Avançar para o quiz
       </button>
     </div>
 
+   
+    <div *ngIf="showModal()" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+      <div class="bg-white shadow-lg p-6 max-w-sm w-full text-center">
+        <h2 class="text-lg font-poppins mb-3">{{ modalTitle() }}</h2>
+        <p class="mb-4 font-poppins text-sm">{{ modalMessage() }}</p>
+
+        <div class="flex justify-center gap-3">
+          <button (click)="closeModal()" class="bg-gray-200 text-gray-800 px-4 py-2 hover:bg-gray-300 transition text-sm">
+            Fechar
+          </button>
+
+          <button *ngIf="modalAction" (click)="modalAction()" class="bg-redIsla text-white px-4 py-2 hover:bg-red-800 transition text-sm">
+            Confirmar
+          </button>
+        </div>
+      </div>
+    </div>
+
   </div>
+</div>
