working on general fixes 2

--- a/frontend/src/app/components/frontoffice/footer/footer.html
+++ b/frontend/src/app/components/frontoffice/footer/footer.html
@@ -1,9 +1,8 @@
 <footer class="bg-black text-white">
-  <div
-    class="flex flex-col md:flex-row justify-between items-center md:items-start px-6 py-0.5 sm:py-3 md:py-2 text-center md:text-left space-y-8 md:space-y-0">
+  <div class="max-w-[1800px] mx-auto flex flex-col md:flex-row justify-between items-start px-6 py-6 space-y-8 md:space-y-0">
 
-
-    <div class="text-center md:text-left pt-8">
+  
+    <div class="text-left mt-5">
       <h3 class="text-lg font-poppins mb-2">Contactos</h3>
       <p class="text-sm sm:text-base">Email: info@islagaia.pt</p>
       <p class="text-sm sm:text-base">Telefone: 22 377 2980</p>
@@ -11,39 +10,36 @@
     </div>
 
 
-
-    <div class="flex flex-col items-center gap-1 pt-8">
-      <h3 class="text-lg font-poppins mb-2 mr-4">Siga-nos</h3>
-      <div class="flex flex-row md:flex-col gap-4 ml-2 md:ml-2">
+    <div class="flex flex-col items-center text-center m-5">
+      <h3 class="text-lg font-poppins mb-2">Siga-nos</h3>
+      <div class="flex flex-row md:flex-col gap-4 justify-center">
         <a href="https://www.facebook.com/GaiaISLA/?locale=pt_PT" target="_blank"
-          class="flex items-center gap-2 hover:opacity-75 transition justify-center md:justify-start">
-          <img src="assets/facebook.png" alt="facebook" class="w-4 h-4 sm:w-6 sm:h-6 filter invert">
-          <span class="text-sm sm:text-sm">ISLA Gaia</span>
+           class="flex items-center gap-2 hover:opacity-75 transition">
+          <img src="assets/facebook.png" alt="facebook" class="w-6 h-6 filter invert">
         </a>
 
         <a href="https://www.instagram.com/islagaia_ipgt/" target="_blank"
-          class="flex items-center gap-2 hover:opacity-75 transition justify-center md:justify-start">
-          <img src="assets/instagram.png" alt="instagram" class="w-4 h-4 sm:w-6 sm:h-6 filter invert">
-          <span class="text-sm sm:text-sm">islagaia_ipgt</span>
+           class="flex items-center gap-2 hover:opacity-75 transition">
+          <img src="assets/instagram.png" alt="instagram" class="w-6 h-6 filter invert">
         </a>
       </div>
     </div>
 
+   
+    <div class="flex justify-end items-end gap-1">
+   
+      <img src="assets/boneco3.png" alt="Boneco" class="w-44 sm:w-52 md:w-80 -mt-8 -ml-52">
 
-
-
-
-
-    <div class="flex justify-center md:justify-end">
+     
       <a href="https://www.islagaia.pt" target="_blank" class="hover:opacity-80 transition">
-        <img src="assets/islalogo.png" alt="Logo ISLA" class="w-48 sm:w-64 md:w-80 mt-0">
+        <img src="assets/islalogo.png" alt="Logo ISLA" class="w-44 sm:w-60 md:w-72">
       </a>
     </div>
 
   </div>
 
-  <div
-    class="bg-white w-full px-4 sm:px-6 py-3 flex flex-col sm:flex-row items-center justify-between text-black text-sm sm:text-base gap-3 sm:gap-0">
+ 
+  <div class="bg-white w-full px-4 sm:px-6 py-3 flex flex-col sm:flex-row items-center justify-between text-black text-sm sm:text-base gap-3 sm:gap-0">
     <span>Política de tratamento de dados</span>
 
     <div class="flex items-center justify-center gap-4 sm:gap-6">
