--- a/frontend/src/app/pages/frontoffice/community/community.html
+++ b/frontend/src/app/pages/frontoffice/community/community.html
@@ -62,24 +62,22 @@
                 <div class="mt-20">
                     <h3 class="text-xl text-redIsla font-poppins mb-2">Como me juntar à praxe?</h3>
                     <p class="text-base leading-relaxed text-gray-700 mt-3">
-                        A Carolina Castilho é uma pessoa muito critica com a sociedade em que vive, e por isso mesmo
-                        decidiu criar este site para expor as suas ideias e pensamentos. Através deste espaço, ela
-                        partilha artigos, ensaios e reflexões sobre temas sociais, culturais e políticos que a
-                        inquietam. O objetivo é fomentar o debate e a reflexão crítica entre os leitores, incentivando
-                        uma análise mais profunda da realidade que nos rodeia. Porem, a Carolina não se limita a
-                        criticar; ela também propõe
-                        soluções e alternativas para os problemas que identifica, mostrando um compromisso ativo com a
-                        mudança social.
+                        Para participar na praxe, os caloiros devem inscrever-se através do formulário disponível no
+                        site da Associação de Estudantes ou contactar os veteranos responsáveis pela organização das
+                        atividades. É importante estar atento às datas e locais das sessões de praxe para garantir a
+                        participação.
                     </p>
                 </div>
             </div>
 
 
-            <div class="flex justify-end w-full mx-auto mt-12 mb-3">
-                <a routerLink="/praxe" class="bg-black text-white font-poppins px-4 py-2 text-sm">
+            <div class="flex w-[1250px] mx-auto mt-12 mb-3">
+                <a routerLink="/praxe" class="ml-auto mr-32 bg-black text-white font-poppins px-4 py-2 text-sm">
                     Aceda ao formulário
                 </a>
             </div>
+
+
 
         </div>
     </section>
