--- a/frontend/src/app/pages/frontoffice/register/register.html
+++ b/frontend/src/app/pages/frontoffice/register/register.html
@@ -56,7 +56,7 @@
         </div>
 
         <button type="submit"
-                class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins"
+                class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins hover:bg-red-800 transition"
                 [disabled]="submitting">
           {{ submitting ? 'A processar...' : 'Registar' }}
         </button>
@@ -73,7 +73,7 @@
 
 
   <div class="w-1/2 h-full flex items-center justify-center">
-    <img src="assets/pessoas.png" alt="Imagem Login" class="w-full h-full object-cover">
+    <img src="assets/criarConta.jpg" alt="Imagem Login" class="w-full h-full object-cover">
   </div>
 
 </div>
