--- a/frontend/src/app/pages/frontoffice/about/about.html
+++ b/frontend/src/app/pages/frontoffice/about/about.html
@@ -1,26 +1,63 @@
 <div class="w-full pt-5 mt-20 sm:mt-24 md:mt-28 flex flex-col items-start px-4 sm:px-6 md:px-8 lg:pt-10 relative">
-  <p class="text-3xl sm:text-2xl md:text-4xl lg:text-8xl font-poppins drop-shadow-lg mb-2 relative inline-block">
+
+
+  <p class="text-3xl sm:text-2xl md:text-4xl lg:text-7xl font-poppins mb-2 relative inline-block">
     Saiba
     <br>
     Mais
-    <span class="absolute left-0 -bottom-2 w-40 sm:-bottom-3 md:-bottom-4 lg:w-[450px] h-1 bg-redIsla z-10"></span>
-    <img src="assets/islaverse.png" alt="ícone"
-      class="absolute left-28 -bottom-4 w-16 h-16 sm:left-28 sm:-bottom-4 md:left-28 md:-bottom-4 lg:left-80 lg:-bottom-10 lg:w-40 lg:h-40 object-contain z-0">
   </p>
+
+
+  <span class="absolute left-0 -bottom-2 w-40 sm:-bottom-3 md:-bottom-4 lg:w-[621px] h-1 bg-redIsla z-20 ml-7"></span>
+
+
+  <div class="
+      absolute
+      left-96 top-[200px]
+      -translate-y-1/2
+      w-96 h-96
+      sm:w-[420px] sm:h-[420px]
+      md:w-[520px] md:h-[520px]
+      lg:w-[400px] lg:h-[400px]
+      bg-gray-300
+      rounded-full
+      z-0
+    "></div>
+
+
+  <img src="assets/boneco2.png" alt="boneco2" class="
+      absolute
+      left-24
+      top-[219px]
+      -translate-y-1/2
+      w-80 h-80
+      sm:left-28 sm:w-[420px] sm:h-[420px]
+      md:left-36 md:w-[520px] md:h-[520px]
+      lg:left-[420px] lg:w-[650px] lg:h-[650px]
+      object-contain
+      z-10
+    ">
 </div>
 
+
+
+
 <div
-  class="w-full max-w-3xl mt-14 sm:mt-16 md:-mt-16 flex flex-col items-end px-4 sm:px-6 md:px-8 pr-2 sm:pr-5 relative ml-auto overflow-hidden text-right">
+  class="w-full max-w-3xl mt-14 sm:mt-16 flex flex-col items-end px-4 sm:px-6 md:px-8 pr-2 sm:pr-5 relative ml-auto overflow-hidden text-right">
   <p
     class="text-1xl sm:text-3xl md:text-4xl lg:text-xl font-poppins text-redIsla font-semibold drop-shadow-lg mb-2 relative inline-block">
     O que é o projeto Islaverse?
   </p>
   <span
     class="text-sm sm:text-lg md:text-2xl lg:text-base font-poppins text-black drop-shadow-lg mb-2 relative inline-block max-w-[90%] sm:max-w-[80%] md:max-w-[80%] lg:max-w-[70%] break-words">
-    O Islaverse é um projeto inovador que cria seres vivos muito inteligentes e falantes que viajam entre universos
-    paralelos.
+    O nome ISLAVERSE surge da junção do nome da instituição com o conceito de “universo”, representando a ideia de um
+    espaço digital próprio do ISLA, onde diferentes tipos de utilizadores podem explorar cursos, conteúdos e
+    experiências de aprendizagem. A plataforma foi pensada para abranger vários níveis de ensino, como CTESP,
+    Licenciaturas, Mestrados e Doutoramentos, bem como diferentes modalidades de formação, nomeadamente online,
+    presencial e b-learning.
   </span>
 </div>
+
 
 <div class="w-full max-w-3xl mt-10 sm:mt-16 md:mt-28 flex flex-col sm:flex-row items-start px-4 sm:px-6 md:px-8 gap-6">
   <div class="flex-1 flex flex-col justify-start pt-10 sm:pt-20 md:pt-32">
@@ -29,16 +66,23 @@
       História do Isla
     </p>
     <span class="text-sm sm:text-lg md:text-2xl lg:text-base font-poppins text-black drop-shadow-lg">
-      O Islaverse começou com um ser vivo
+      O ISLA – Instituto Superior de Línguas e Administração tem raízes no ensino superior privado em Portugal. A
+      instituição matriz foi criada originalmente em 1962, sendo a primeira instituição privada de ensino superior no
+      país.
+      islagaia.pt
+
+      A extensão do ISLA a Vila Nova de Gaia aconteceu como parte dessa expansão nacional: foi fundado o ISLA em Gaia em
+      1989, autorizado oficialmente a funcionar a partir de 8 de setembro de 1989.
     </span>
   </div>
 
   <div class="flex-1 relative w-full h-[200px] sm:h-[250px] md:h-[300px]">
-    <div class="hidden lg:block absolute top-0 left-[869px] h-80 w-52 bg-gray-300 z-0 "></div>
-    <img src="assets/Multimedia.png" alt="Horizontal"
-      class="mx-auto sm:mx-0 relative sm:absolute sm:top-12 sm:left-[650px] w-full sm:w-96 h-auto z-10 object-cover  shadow-lg">
+    <div class="hidden lg:block absolute top-0 left-[869px] h-80 w-52 bg-gray-300 z-0"></div>
+    <img src="assets/about.jpg" alt="Horizontal"
+      class="mx-auto sm:mx-0 relative sm:absolute sm:top-12 sm:left-[650px] w-full sm:w-96 h-auto z-10 object-cover shadow-lg">
   </div>
 </div>
+
 
 <div class="w-full overflow-x-hidden">
   <div
@@ -78,7 +122,7 @@
     </ul>
 
     <div
-      class="flex items-center gap-2 text-redIsla font-poppins  text-sm sm:text-base md:text-base sm:ml-10 md:ml-[19px] mt-6 mb-10">
+      class="flex items-center gap-2 text-redIsla font-poppins text-sm sm:text-base md:text-base sm:ml-10 md:ml-[19px] mt-6 mb-10">
       <a routerLink="" class="text-2xl font-bold">+</a>
       <span>Mais perguntas</span>
     </div>
