--- a/frontend/src/app/pages/frontoffice/forgot-password/forgot-password.html
+++ b/frontend/src/app/pages/frontoffice/forgot-password/forgot-password.html
@@ -23,7 +23,7 @@
         </div>
 
 
-        <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins">
+        <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins hover:bg-red-800 transition">
           Redefinir Senha
         </button>
       </form>
@@ -33,7 +33,7 @@
 
 
   <div class="w-1/2 h-full flex items-center justify-center">
-    <img src="assets/pessoas.png" alt="Imagem Login" class="w-full h-full object-cover">
+    <img src="assets/esqueceu.jpg" alt="Imagem Login" class="w-full h-full object-cover">
   </div>
 
 </div>
