--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -1,26 +1,28 @@
 <div class="relative w-full overflow-x-hidden">
   <div class="relative w-full h-[800px] sm:h-[800px] md:h-[800px]">
     <video autoplay muted loop class="absolute top-0 left-0 w-full h-full object-cover z-0">
-      <source src="assets/1.mp4" type="video/mp4">
+      <source src="assets/islandersHome.mp4" type="video/mp4">
       O teu browser não suporta vídeo.
     </video>
 
     
   </div>
 
-  <div class="relative w-full h-[300px] sm:h-[400px] md:h-[500px] mt-8 sm:mt-12 md:mt-16">
-    <img src="assets/isla.jpg" alt="Foto Destacada" class="w-full h-full object-cover">
-    <div
-      class="absolute inset-0 flex flex-col justify-start items-center text-white text-center px-4 pt-8 sm:pt-12 md:pt-16">
-      <h2 class="text-2xl sm:text-4xl md:text-5xl font-poppins drop-shadow-lg relative inline-block">
-        Conheça a nossa <span class="text-redIsla">faculdade!</span>
-        <span class="absolute left-0 right-0 -bottom-2 sm:-bottom-3 md:-bottom-4 h-1 bg-redIsla"></span>
-      </h2>
-    </div>
-  </div>
+<div class="w-full text-center text-black px-4 pt-4 sm:pt-6 md:pt-8 mb-32 mt-32">
+  <h2 class="text-2xl sm:text-4xl md:text-3xl font-poppins drop-shadow-lg inline-block">
+    Conheça a nossa <span class="text-redIsla">faculdade!</span>
+    <span class="absolute left-0 right-0 -bottom-2 sm:-bottom-3 md:-bottom-4 h-1 bg-redIsla"></span>
+  </h2>
+</div>
+
+
+<div class="relative w-full h-[300px] sm:h-[400px] md:h-[600px] mt-4">
+  <img src="assets/islaHome.jpg" alt="Foto Destacada" class="w-full h-full object-cover">
+</div>
+
 
   <div class="w-full mt-8 sm:mt-12 md:mt-16 flex flex-col items-end px-4 sm:px-6 md:px-8">
-    <p class="text-base sm:text-3xl md:text-4xl lg:text-5xl font-poppins drop-shadow-lg mb-2">
+    <p class="text-base sm:text-3xl md:text-4xl lg:text-3xl font-poppins drop-shadow-lg mb-10">
       Cursos em <span class="text-redIsla relative inline-block">
         destaque
         <span class="absolute left-0 -bottom-1 sm:-bottom-2 md:-bottom-3 w-full h-1 bg-redIsla"></span>
@@ -28,7 +30,8 @@
     </p>
   </div>
 
-  <div class="w-full flex flex-row gap-4 overflow-x-auto p-4"> <a *ngFor="let course of courses()"
+  <div class="w-full flex flex-row gap-4 overflow-x-auto p-4"> <a *ngFor="let course of courses() | slice:-5"
+
       class="flex-none w-72 bg-white p-4 flex flex-col border border-[#D9D9D9] shadow-[0_4px_12px_rgba(0,0,0,0.18)] hover:shadow-[0_6px_16px_rgba(0,0,0,0.22)] transition-shadow duration-300">
       <img [src]="course.image" [alt]="course.name" class="w-full h-40 object-cover mb-4">
       <p class="text-lg font-poppins text-black mb-1">{{ course.name }}</p>
@@ -67,12 +70,12 @@
 
     <section class="relative z-10 h-full w-full text-white grid grid-rows-2 grid-cols-1 md:grid-cols-2 gap-4 px-8">
       <div class="flex justify-start items-center row-span-1">
-        <h2 class="text-2xl sm:text-4xl md:text-5xl font-poppins drop-shadow-lg">
+        <h2 class="text-2xl sm:text-4xl md:text-3xl font-poppins drop-shadow-lg">
           Experimente a sensação de um curso online
         </h2>
       </div>
       <div class="flex justify-end items-start row-span-1 mt-14 sm:mt-8 md:mt-80">
-        <p routerLink="/destino" class="bg-black px-3 py-1 text-lg sm:text-xl md:text-2xl drop-shadow-lg">
+        <p routerLink="/destino" class="bg-black px-3 py-1 text-lg sm:text-xl md:text-1xl drop-shadow-lg">
           Comece a <a routerLink="/destino" class="font-poppins hover:text-gray-300 transition">DEMO</a>
         </p>
       </div>
