--- a/frontend/src/app/pages/frontoffice/login/login.html
+++ b/frontend/src/app/pages/frontoffice/login/login.html
@@ -42,7 +42,7 @@
           {{ backendError }}
         </div>
 
-        <button type="submit" class="mt-1 px-4 py-2 w-full bg-redIsla text-white font-poppins" [disabled]="submitting">
+        <button type="submit" class="mt-1 px-4 py-2 w-full bg-redIsla text-white font-poppins hover:bg-red-800 transition" [disabled]="submitting">
           {{ submitting ? 'A processar...' : 'Entrar' }}
         </button>
       </form>
@@ -55,27 +55,13 @@
         Registe-se
       </a>
 
-      <p class="mt-4 text-xs text-gray-600 font-poppins">
-       <strong>Credenciais de admin:</strong> login: <span class="font-semibold">admin</span> — senha: <span class="font-semibold">teste123</span>
-      </p>
-
-      <p class="mt-4 text-xs text-gray-600 font-poppins">
-       <strong>Credenciais de student:</strong> login: <span class="font-semibold">jonas</span> — senha: <span class="font-semibold">teste123</span>
-      </p>
-
-      <p class="mt-4 text-xs text-gray-600 font-poppins">
-       <strong>Credenciais de teacher:</strong> login: <span class="font-semibold">toni</span> — senha: <span class="font-semibold">teste123</span>
-      </p>
-
-      <p class="mt-4 text-xs text-gray-600 font-poppins">
-       <strong>Credenciais de guest:</strong> login: <span class="font-semibold">pedrao123</span> — senha: <span class="font-semibold">teste123</span>
-      </p>
+      
 
     </div>
   </div>
 
   <div class="w-1/2 h-full">
-    <img src="assets/pessoas.png" alt="Imagem Login" class="w-full h-full object-cover">
+    <img src="assets/entrar.jpg" alt="Imagem Login" class="w-full h-full object-cover">
   </div>
 </div>
 
