--- a/frontend/src/app/pages/frontoffice/perfil/perfil.html
+++ b/frontend/src/app/pages/frontoffice/perfil/perfil.html
@@ -269,7 +269,7 @@
             </thead>
 
             <tbody>
-              <tr *ngFor="let a of awards()" class="border-t">
+              <tr *ngFor="let a of awardsSorted()" class="border-t">
                 <td class="p-3">
                   <div class="flex items-center gap-3">
                     <img
